fixed spacing error

--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -16,7 +16,7 @@
 
 .products--card {
     padding: 0 !important;
-    margin: 0 2.5px 20px 2.5px;
+    margin: 0 1px 20px 1px;
 }
 
 .products--card-body {
